[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["mysubsnewslivecom <my.subs.news@live.com>"]
readme = "README.md"
packages = [{include = "etl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
redis = "^5.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
